# Algoverse---Synthetic-Society

./: .gitignore  README.md  agentConvo.txt  convo.txt  devSociety.txt  dynamic_run.py  experiments.py  message.txt  noRoles.txt  prompts.txt  pyproject.toml  requirements.txt  run.py
Baselines/: runSingle.py
Synthetic Societies/: .gitignore  ER_Society.txt  batch_runner.py  calc3_Society.txt  convo.txt  convo_single.txt  datasetExp.py  download_RLI.py  experiments.py  load.py  mcq_batch.py  mcq_eval.py  mcq_run.py  noRoles2.txt  noRolesER.txt  noRolesSociety.txt  prompts.txt  requirements.txt  run.py  terminal.txt
Synthetic Societies/agents/: baseAgents.py  societies.py
Synthetic Societies/dataset_metrics/mcq/averaged/: averaged_metrics.txt
Synthetic Societies/datasets/RLI/: .gitattributes  README.md  metadata.csv
Synthetic Societies/datasets/RLI/public_001/project/: brief.md
Synthetic Societies/datasets/RLI/public_002/project/: brief.md
Synthetic Societies/jsonFiles/: ER_society.json  calc3_society.json  dev_society.json  example.json  noRoles.json  voting_society.json
Synthetic Societies/jsonMCQ/: ER_society.json  dev_society.json  noRoles.json
Synthetic Societies/metrics/ER_Society/: metrics.txt
Synthetic Societies/metrics/noRolesER/: metrics.txt
Synthetic Societies/openai/types/: chat.py
Synthetic Societies/results/: accuracy_summary.json
Synthetic Societies/results/train_sample/: accuracy_summary.json
agents/: agentFactory.py  baseAgents.py  singleAgent.py  societies.py
configs/: dev_team.json  example.json
example/: pyproject.toml  run_agents_v1.py
jsonFiles/: NoRoles.json  dev_society.json  example.json
metrics/ER_Society/: metrics.txt
metrics/devSocietyDist/: metrics.txt
(+543 files in other folders)
